k8s/production/sosmed/sosmed.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pesbuk
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      name: pesbuk
      metadata: pesbuk
  template:
    metadata:
      labels:
        name: pesbuk
        metadata: pesbuk
    spec:
      containers:
        - name: pesbuk
          image: varidmahdi/sosmed:branch-appversion
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pesbuk
  namespace: production
spec:
  #type: LoadBalancer
  ports:
    - port: 80
      #nodePort: 30080
  selector:
    name: pesbuk
---
